update index file about section

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
             <div class="hero-left">
                 <h1 class="greeting">Hi,</h1>
                 <h2 class="name-intro">I'm <span class="name">Diganta</span></h2>
-                <p class="title">Data Scientist & ML Engineer</p>
+                <p class="title">Aspiring Data Scientist & LLM Enthusiast with MLOps Focus</p>
                 <button class="hire-btn">
                     Hire Me
                     <span>→</span>
@@ -899,7 +899,7 @@
             <div class="hero-right">
                 <div class="hero-content">
                     <p class="expertise-label">About Me</p>
-                    <p class="expertise-desc">M.Tech in Data Science @ IIT Guwahati, specializing in ML/AI development, LLM fine tuning</p>
+                    <p class="expertise-desc">Pursuing M.Tech in Data Science @ IIT Guwahati | Focused on ML/AI Development and LLM Fine-Tuning</p>
                     <p class="cta-text">Looking for a data scientist to build your ML solutions and grow your business? Let's shake hands with me.</p>
                     <a href="https://drive.google.com/file/d/1HL9Y3TcAhDF1akXl3pFt2f8ZwfI_PsTS/view?usp=sharing" class="download-cv">Download CV ↓</a>
                 </div>
