update education file

--- a/education.html
+++ b/education.html
@@ -595,7 +595,7 @@
                             <p class="detail-item"><strong>Thesis:</strong> Applications of Large Language Models in NLP</p>
                         </div>
                     </div>
-                    <img src="iitg.jpg" alt="IIT Guwahati" class="institute-image">
+                    <img src="img/iitg.jpg" alt="IIT Guwahati" class="institute-image">
                 </div>
 
                 <div class="education-item">
@@ -609,7 +609,7 @@
                             <p class="detail-item"><strong>Thesis:</strong> Optimizing Data Processing Pipelines for Large-Scale Applications</p>
                         </div>
                     </div>
-                    <img src="iitkgp.jpg" alt="IIT Kharagpur" class="institute-image">
+                    <img src="img/iitkgp.jpg" alt="IIT Kharagpur" class="institute-image">
                 </div>
 
                 <div class="education-item">
@@ -623,7 +623,7 @@
                             <p class="detail-item"><strong>Thesis:</strong> Applications of Numerical Methods in Real-World Problems</p>
                         </div>
                     </div>
-                    <img src="vu.jpg" alt="Vidyasagar University" class="institute-image">
+                    <img src="img/vu.jpg" alt="Vidyasagar University" class="institute-image">
                 </div>
 
                 <div class="education-item">
@@ -637,7 +637,7 @@
                             <p class="detail-item"><strong>Projects:</strong> Mathematical Modeling of Physical Systems</p>
                         </div>
                     </div>
-                    <img src="kgp_col.jpg" alt="Vidyasagar University" class="institute-image">
+                    <img src="img/kgp_col.jpg" alt="Vidyasagar University" class="institute-image">
                 </div>
 
                 <div class="education-item">
@@ -650,7 +650,7 @@
                             <p class="detail-item"><strong>Stream:</strong> Science (PCMB)</p>
                         </div>
                     </div>
-                    <img src="sch.jpg" alt="West Bengal State Board" class="institute-image">
+                    <img src="img/sch.jpg" alt="West Bengal State Board" class="institute-image">
                 </div>
 
                 <div class="education-item">
@@ -662,7 +662,7 @@
                             <p class="detail-item"><strong>Percentage:</strong> 69.85%</p>
                         </div>
                     </div>
-                    <img src="sch.jpg" alt="West Bengal State Board" class="institute-image">
+                    <img src="img/sch.jpg" alt="West Bengal State Board" class="institute-image">
                 </div>
             </div>
 
