update education files

--- a/education.html
+++ b/education.html
@@ -590,9 +590,8 @@
                         <p class="institution"><i class="fas fa-university"></i> Indian Institute of Technology, Guwahati</p>
                         <p class="year">2023 - 2025</p>
                         <div class="education-details">
-                            <p class="detail-item"><strong>CGPA:</strong> 8.00/10 (Expected)</p>
-                            <p class="detail-item"><strong>Specialization:</strong> Machine Learning, Deep Learning, Big Data Analytics</p>
-                            <p class="detail-item"><strong>Thesis:</strong> Applications of Large Language Models in NLP</p>
+                            <p class="detail-item"><strong>Specialization:</strong> Machine Learning, Deep Learning, Large Language Model, Image Processing with ML</p>
+                            <p class="detail-item"><strong>Thesis:</strong> Multimodal Deepfake Detection</p>
                         </div>
                     </div>
                     <img src="img/iitg.jpg" alt="IIT Guwahati" class="institute-image">
@@ -604,9 +603,8 @@
                         <p class="institution"><i class="fas fa-university"></i> Indian Institute of Technology, Kharagpur</p>
                         <p class="year">2021 - 2023</p>
                         <div class="education-details">
-                            <p class="detail-item"><strong>CGPA:</strong> 8.58/10</p>
-                            <p class="detail-item"><strong>Key Courses:</strong> Advanced Algorithms, Data Mining, Cloud Computing</p>
-                            <p class="detail-item"><strong>Thesis:</strong> Optimizing Data Processing Pipelines for Large-Scale Applications</p>
+                            <p class="detail-item"><strong>Key Courses:</strong> Data Structure and Algorithms, DBMS, Operating System, Computer Network</p>
+                            <p class="detail-item"><strong>Thesis:</strong> Algorithm Visualizer Web Applications</p>
                         </div>
                     </div>
                     <img src="img/iitkgp.jpg" alt="IIT Kharagpur" class="institute-image">
@@ -618,8 +616,7 @@
                         <p class="institution"><i class="fas fa-university"></i> Vidyasagar University, West Bengal</p>
                         <p class="year">2018 - 2020</p>
                         <div class="education-details">
-                            <p class="detail-item"><strong>CGPA:</strong> 7.52/10</p>
-                            <p class="detail-item"><strong>Specialization:</strong> Numerical Analysis, Optimization Techniques</p>
+                            <p class="detail-item"><strong>Specialization:</strong> Complex analysis, Numerical Analysis, Optimization Techniques</p>
                             <p class="detail-item"><strong>Thesis:</strong> Applications of Numerical Methods in Real-World Problems</p>
                         </div>
                     </div>
@@ -632,8 +629,7 @@
                         <p class="institution"><i class="fas fa-university"></i> Vidyasagar University, West Bengal</p>
                         <p class="year">2014 - 2018</p>
                         <div class="education-details">
-                            <p class="detail-item"><strong>Percentage:</strong> 58.00%</p>
-                            <p class="detail-item"><strong>Key Subjects:</strong> Abstract Algebra, Real Analysis, Complex Analysis</p>
+                            <p class="detail-item"><strong>Key Subjects:</strong> Abstract Algebra, Real Analysis, ODE</p>
                             <p class="detail-item"><strong>Projects:</strong> Mathematical Modeling of Physical Systems</p>
                         </div>
                     </div>
@@ -646,8 +642,7 @@
                         <p class="institution"><i class="fas fa-university"></i> West Bengal State Board</p>
                         <p class="year">2014</p>
                         <div class="education-details">
-                            <p class="detail-item"><strong>Percentage:</strong> 66.80%</p>
-                            <p class="detail-item"><strong>Stream:</strong> Science (PCMB)</p>
+                            <p class="detail-item"><strong>Stream:</strong> Science</p>
                         </div>
                     </div>
                     <img src="img/sch.jpg" alt="West Bengal State Board" class="institute-image">
@@ -659,7 +654,6 @@
                         <p class="institution"><i class="fas fa-university"></i> West Bengal State Board</p>
                         <p class="year">2012</p>
                         <div class="education-details">
-                            <p class="detail-item"><strong>Percentage:</strong> 69.85%</p>
                         </div>
                     </div>
                     <img src="img/sch.jpg" alt="West Bengal State Board" class="institute-image">
